--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
    <!-- ------ header start ------->
    <section id="header">
-    <a href="#"><img src="/images/FinesseFits.png" alt="" class="logo"></a>
+    <a href="index.html"><img src="/images/FinesseFits.png" alt="" class="logo"></a>
     <div>
       <ul id="navbar">
-        <li><a href="/Home.html" class="active">Home</a></li>
+        <li><a href="/index.html" class="active">Home</a></li>
         <li><a href="Shop.html">Shop</a></li>
         <li><a href="Blog.html">Blog</a></li>
         <li><a href="About.html">About</a></li>
