--- a/product.description.html
+++ b/product.description.html
@@ -15,10 +15,10 @@
 
   <!-- ------ header start ------->
     <section id="header">
-      <a href="#"><img src="/images/FinesseFits.png" alt="" class="logo"></a>
+      <a href="index.html"><img src="/images/FinesseFits.png" alt="" class="logo"></a>
       <div>
         <ul id="navbar">
-          <li><a href="/Home.html">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <li><a href="Shop.html" class="active">Shop</a></li>
           <li><a href="Blog.html">Blog</a></li>
           <li><a href="About.html">About</a></li>
@@ -73,8 +73,13 @@
             <button class="normal" onclick="addToCart()">Add To Cart</button>
             <h4>Product Details</h4>
             <span>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, laborum reiciendis iusto deserunt corporis dicta ab. Placeat ipsum sequi modi sint commodi tempora magnam rerum at. Nam quam fugiat autem aperiam, nisi voluptatem ipsa voluptates iusto, accusantium sunt, necessitatibus maiores recusandae eveniet dolorem tempora blanditiis delectus tenetur asperiores quibusdam atque?
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, adipisci, esse eveniet numquam maiores nisi eius iusto amet non at, quam facere voluptatibus aperiam consectetur debitis soluta unde fugit accusantium sunt omnis iste! Illum, dicta enim iste harum ipsa ullam sunt ad quae perspiciatis exercitationem natus laboriosam nostrum earum fugit?
+              Introducing the "Sunset Mirage" Maxi Dress: a standout piece in our latest collection, perfect for both casual outings and sophisticated evenings. This beautifully crafted dress features a flowing silhouette draped in luxurious, lightweight chiffon that dances with every step. The vibrant ombre design transitions from a deep, fiery orange to a gentle peach, mimicking a serene sunset. Adjustable spaghetti straps and a flattering V-neckline enhance its comfort and style, ensuring a perfect fit for all body types. Embrace elegance and freedom with the "Sunset Mirage" Maxi Dress, your ideal companion for making memorable moments.
+              <ul>
+                <li>30-Day Return Policy: Love it or return it within 30 days for a full refund, no questions asked</li>
+                <li>Premium Quality Guaranteed: Crafted from high-grade chiffon for durability and long-lasting wear."</li>
+                <li>Fade-Resistant Fabric: Ensures the vibrant ombre colors stay true wash after wash."</li>
+                <li>Perfect Fit Promise: Adjustable straps and tailored cuts ensure your dress fits just right."</li>
+              </ul>
             </span>
 
         </div>
