yes i have made some change in the blogs

--- a/Blog.html
+++ b/Blog.html
@@ -54,7 +54,7 @@
         </div>
         <div class="blog-details">
           <h4>The cotton-Jersey zip-up Hoodie</h4>
-          <p>Browse through our extensive collection of high-quality products designed to meet all your needs.</p>
+          <p>Introducing the "Sunset Mirage" Maxi Dress: a standout piece in our latest collection, perfect for both casual outings and sophisticated evenings. This beautifully crafted dress features a flowing silhouette draped in luxurious, lightweight chiffon that dances with every step.</p>
           <a href="#">CONTINUE READING</a>
         </div>
         <H1>13/01</H1>
@@ -66,7 +66,7 @@
         </div>
         <div class="blog-details">
           <h4>The cotton-Jersey zip-up Hoodie</h4>
-          <p>Browse through our extensive collection of high-quality products designed to meet all your needs.</p>
+          <p> The vibrant ombre design transitions from a deep, fiery orange to a gentle peach, mimicking a serene sunset. Adjustable spaghetti straps and a flattering V-neckline enhance its comfort and style, ensuring a perfect fit for all body types. Embrace elegance and freedom with the "Sunset Mirage" Maxi Dress, your ideal companion for making memorable moments.</p>
           <a href="#">CONTINUE READING</a>
         </div>
         <H1>13/01</H1>
@@ -89,7 +89,7 @@
           <img src="/blog-img/flyer4.jpg" alt="">
         </div>
         <div class="blog-details">
-          <h4>The cotton-Jersey zip-up Hoodie</h4>
+          <h4>Fashion Trends Throughout this year:</h4>
           <p>Browse through our extensive collection of high-quality products designed to meet all your needs.</p>
           <a href="#">CONTINUE READING</a>
         </div>
