--- a/about.html
+++ b/about.html
@@ -19,10 +19,10 @@
       <a href="index.html"><img src="/images/FinesseFits.png" alt="" class="logo"></a>
       <div>
         <ul id="navbar">
-          <li><a href="/index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="Shop.html">Shop</a></li>
           <li><a href="Blog.html">Blog</a></li>
-          <li><a href="About.html" class="active">About</a></li>
+          <li><a href="about.html" class="active">About</a></li>
           <li><a href="Contact.html">Contact</a></li>
           <a href="#" id="close"><i class="fas fa-times"></i></a>
         </ul>
@@ -51,7 +51,10 @@
       <img src="/about-img/about1.png" alt="">
       <div>
         <h2>Who We Are?</h2>
-        <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione odio quibusdam deleniti fugiat ullam natus itaque tenetur aliquam deserunt! Impedit debitis consequuntur vero inventore dignissimos quos exercitationem non architecto perspiciatis voluptates distinctio, eveniet eum consectetur et! Iure nam aspernatur eum iusto reiciendis harum asperiores natus. Veniam vitae sint earum possimus temporibus error nam eveniet exercitationem, ea ipsa quae dolore ex reprehenderit voluptatibus? Consequuntur sit fugiat nulla excepturi quae blanditiis numquam, maxime quasi. Consectetur sequi vero facilis veritatis. Sunt, ipsa. Fugiat at dolores recusandae possimus, esse quod maiores, cupiditate corporis molestias mollitia voluptatum temporibus alias excepturi nam iure, obcaecati quisquam accusantium.</p>
+        <p> Established in [2020], [FinesseFits] began as a passion project fueled by a love for fashion and a desire to empower individuals to express themselves through clothing. What started as a small online boutique has evolved into a thriving eCommerce platform, serving customers across Nigeria and beyond.
+          Driven by a commitment to quality, creativity, and inclusivity, [FinesseFits] has curated a diverse range of clothing, accessories, and footwear to suit every style and occasion. Our collections draw inspiration from the rich cultural heritage of Nigeria, blending traditional textiles with contemporary designs to create unique and timeless pieces.
+          Over the years, we've built a loyal community of fashion enthusiasts who trust us to deliver not only stylish products but also exceptional customer service. As we continue to grow and evolve, our mission remains the same: to inspire confidence and celebrate individuality through the power of fashion. Join us on our journey and discover your style with [FinesseFits].
+          </p>
         <abbr title="">Browse through our extensive collection of high-quality products designed to meet all your needs.</abbr>
 
         <br><br>
