--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <a href="index.html"><img src="/images/FinesseFits.png" alt="" class="logo"></a>
     <div>
       <ul id="navbar">
-        <li><a href="/index.html" class="active">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="Shop.html">Shop</a></li>
         <li><a href="Blog.html">Blog</a></li>
-        <li><a href="About.html">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="Contact.html">Contact</a></li>
         <a href="#" id="close"><i class="fas fa-times"></i></a>
       </ul>
